--- a/animations.css
+++ b/animations.css
@@ -23,3 +23,22 @@
 .ex-3-square:hover{
     border-radius: 50%;
 }
+
+.ex-4-square{
+    transition: opacity 4s;
+}
+.ex-4-square:hover{
+    opacity: 0;
+}
+
+.ex-5-square{
+    transition: transform 2s;
+}
+
+.ex-5-square:hover{
+    transform: scale(2);
+}
+
+.ex-5-square:active{
+    transform: scale(0.5);
+}
