--- a/animations.css
+++ b/animations.css
@@ -32,7 +32,7 @@
 }
 
 .ex-5-square{
-    transition: transform 2s;
+    transition: transform ;
 }
 
 .ex-5-square:hover{
@@ -41,4 +41,22 @@
 
 .ex-5-square:active{
     transform: scale(0.5);
+}
+
+.ex-6-img{
+    transition: filter ;
+    
+}
+
+.ex-6-img:hover{
+    filter: grayscale(100%)
+}
+
+.ex-7-img{
+    transition: filter 4s;
+}
+
+.ex-7-img:hover{
+    filter: blur(5px)  saturate(35%);
+    
 }
