--- a/animations.css
+++ b/animations.css
@@ -235,6 +235,7 @@ animation-timing-function: linear;
     animation-name: white-button-2-complete;
     animation-duration: 3s;
     animation-timing-function: linear;
+    animation-iteration-count: infinite;
 }
 
 
