--- a/animations.css
+++ b/animations.css
@@ -172,6 +172,7 @@ animation-timing-function: linear;
     animation-name: white-button-1-complete;
     animation-duration: 3s;
     animation-timing-function: linear;
+    animation-iteration-count: infinite;
 }
 
 @keyframes white-button-1-complete{
